# snippetbox-rust

./: Cargo.toml
src/: main.rs
src/handlers/: mod.rs
src/logger/: mod.rs
src/models/: mod.rs
templates/: base.html.hbs  home.html.hbs
