[package]
name = "snippetbox-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
fern = "0.6.1"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
